manifests/tap-toolkit-starter.tanzu.japan.com/1.3.4/app-sso/overlay.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:overlay", "overlay")

---
apiVersion: v1
kind: Service
metadata:
  name: basic-authserver
  namespace: service-instances
  annotations:
    kapp.k14s.io/disable-default-label-scoping-rules: ""
spec:
  selector:
    app.kubernetes.io/part-of: basic-authserver
    app.kubernetes.io/component: authorization-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic-authserver
  namespace: service-instances
spec:
  virtualhost:
    fqdn: #@ "authserver." + data.values.sso.domain
    tls:
      secretName: tanzu-system-ingress/cnrs-default-tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: basic-authserver
          port: 80
